[workspace]
members = [
    "crates/gateway",
    "crates/mempool",
    "crates/mempool_infra",
    "crates/mempool_node",
    "crates/mempool_test_utils",
    "crates/mempool_types",
    "crates/starknet_sierra_compile",
    "crates/task_executor",
    "crates/tests-integration",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/starkware-libs/mempool/"
license = "Apache-2.0"

[workspace.lints.rust]
future-incompatible = "deny"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
unused = "deny"
warnings = "deny"

[workspace.lints.clippy]
as_conversions = "deny"

[workspace.dependencies]
anyhow = "1.0"
assert-json-diff = "2.0.2"
assert_matches = "1.5.0"
async-trait = "0.1.79"
axum = "0.6.12"
bincode = "1.3.3"
blockifier = { git = "https://github.com/starkware-libs/blockifier.git", rev = "32191d41" }
cairo-lang-sierra = "2.7.0-dev.0"
cairo-lang-starknet-classes = "2.7.0-dev.0"
cairo-lang-utils = "2.7.0-dev.0"
cairo-vm = "1.0.0-rc3"
clap = "4.3.10"
colored = "2.1.0"
const_format = "0.2.30"
derive_more = "0.99"
futures = "0.3.30"
hyper = { version = "0.14", features = ["client", "http1", "http2", "server", "tcp"] }
indexmap = "2.1.0"
itertools = "0.13.0"
lazy_static = "1.4.0"
mockall = "0.12.1"
mockito =  "1.4.0"
num-bigint = { version = "0.4.5", default-features = false }
num-traits = "0.2"
# TODO(YaelD, 28/5/2024): The special Papyrus version is needed in order to be aligned with the
# starknet-api version. This should be removed once we have a mono-repo.
papyrus_common = { git = "https://github.com/starkware-libs/papyrus.git", rev = "ca83fd42" }
papyrus_config = { git = "https://github.com/starkware-libs/papyrus.git", rev = "ca83fd42" }
papyrus_rpc = { git = "https://github.com/starkware-libs/papyrus.git", rev = "ca83fd42" }
papyrus_storage = { git = "https://github.com/starkware-libs/papyrus.git", rev = "ca83fd42" }
pretty_assertions = "1.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rstest = "0.17.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
# TODO(Arni, 1/5/2024): Use a fixed version once the StarkNet API is stable.
starknet_api = "0.13.0-dev.9"
# TODO(YaelD, 28/5/2024): The special Papyrus version is needed in order to be aligned with the
# starknet-api version. This should be removed once we have a mono-repo.
starknet-types-core = { version = "0.1.5", features = ["hash", "prime-bigint", "std"] }
starknet_client = { git = "https://github.com/starkware-libs/papyrus.git", rev = "ca83fd42" }
strum = "0.24.1"
tempfile = "3.3.0"
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-test = "0.4.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.5.0"
validator = "0.12"
