[workspace]
# Using version 2 to avoid unifying features. For more info, read:
#   https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
  "crates/blockifier",
  "crates/blockifier_reexecution",
  "crates/committer_cli",
  "crates/mempool_test_utils",
  "crates/native_blockifier",
  "crates/papyrus_base_layer",
  "crates/papyrus_common",
  "crates/papyrus_config",
  "crates/papyrus_execution",
  "crates/papyrus_load_test",
  "crates/papyrus_monitoring_gateway",
  "crates/papyrus_network",
  "crates/papyrus_network_types",
  "crates/papyrus_node",
  "crates/papyrus_p2p_sync",
  "crates/papyrus_proc_macros",
  "crates/papyrus_protobuf",
  "crates/papyrus_rpc",
  "crates/papyrus_state_reader",
  "crates/papyrus_storage",
  "crates/papyrus_sync",
  "crates/papyrus_test_utils",
  "crates/sequencing/papyrus_consensus",
  "crates/sequencing/papyrus_consensus_orchestrator",
  "crates/starknet_api",
  "crates/starknet_batcher",
  "crates/starknet_batcher_types",
  "crates/starknet_class_manager_types",
  "crates/starknet_client",
  "crates/starknet_committer",
  "crates/starknet_compilation_utils",
  "crates/starknet_compile_to_casm",
  "crates/starknet_compile_to_native",
  "crates/starknet_consensus_manager",
  "crates/starknet_gateway",
  "crates/starknet_gateway_types",
  "crates/starknet_http_server",
  "crates/starknet_infra_utils",
  "crates/starknet_integration_tests",
  "crates/starknet_l1_provider",
  "crates/starknet_l1_provider_types",
  "crates/starknet_mempool",
  "crates/starknet_mempool_p2p",
  "crates/starknet_mempool_p2p_types",
  "crates/starknet_mempool_types",
  "crates/starknet_monitoring_endpoint",
  "crates/starknet_patricia",
  "crates/starknet_sequencer_infra",
  "crates/starknet_sequencer_node",
  "crates/starknet_state_sync",
  "crates/starknet_state_sync_types",
  "crates/starknet_task_executor",
  "toml_test_utils",
  "workspace_tests",
]

[workspace.package]
version = "0.14.0-rc.4"
edition = "2021"
repository = "https://github.com/starkware-libs/sequencer/"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
alloy-contract = "0.3.5"
alloy-dyn-abi = "0.8.3"
alloy-json-rpc = "0.3.5"
alloy-primitives = "0.8.3"
alloy-provider = "0.3.5"
alloy-sol-types = "0.8.3"
alloy-transport = "0.3.5"
alloy-transport-http = "0.3.5"
anyhow = "1.0.44"
ark-ec = "0.4.2"
ark-ff = "0.4.0-alpha.7"
ark-secp256k1 = "0.4.0"
ark-secp256r1 = "0.4.0"
assert-json-diff = "2.0.2"
assert_matches = "1.5.0"
async-recursion = "1.1.0"
async-stream = "0.3.3"
async-trait = "0.1.79"
atomic_refcell = "0.1.13"
axum = "0.6.12"
base64 = "0.13.0"
bincode = "1.3.3"
bisection = "0.1.0"
bitvec = "1.0.1"
blockifier = { path = "crates/blockifier", version = "0.14.0-rc.4" }
byteorder = "1.4.3"
bytes = "1"
cached = "0.44.0"
cairo-felt = "0.9.1"
cairo-lang-casm = "2.10.0"
cairo-lang-runner = "2.10.0"
cairo-lang-sierra = "=2.10.0"
cairo-lang-sierra-to-casm = "2.10.0"
cairo-lang-starknet-classes = "2.10.0"
cairo-lang-utils = "2.10.0"
cairo-native = "0.3.6"
cairo-vm = "=1.0.2"
camelpaste = "0.1.0"
chrono = "0.4.26"
clap = "4.5.4"
colored = "2.1.0"
const_format = "0.2.30"
criterion = "0.5.1"
deadqueue = "0.2.4"
defaultmap = "0.5.0"
derive_more = "0.99.17"
enum-as-inner = "0.6.1"
enum-assoc = "1.1.0"
enum-iterator = "1.4.1"
ethers = "2.0.3"
ethers-core = "2.0.3"
ethnum = "1.5.0"
flate2 = "1.0.24"
fs2 = "0.4"
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
glob = "0.3.1"
google-cloud-storage = "0.22.1"
goose = "0.17.0"
hex = "0.4.3"
http = "0.2.8"
http-body = "0.4.5"
human_bytes = "0.4.3"
hyper = "0.14"
indexmap = "2.1.0"
insta = "1.29.0"
integer-encoding = "3.0.4"
itertools = "0.12.1"
jsonrpsee = "0.20.3"
jsonschema = "0.17.0"
keccak = "0.1.3"
lazy_static = "1.5.0"
libmdbx = "0.3.5"
libp2p = "0.53.2"
libp2p-swarm-test = "0.3.0"
log = "0.4"
lru = "0.12.0"
memmap2 = "0.8.0"
mempool_test_utils = { path = "crates/mempool_test_utils", version = "0.14.0-rc.4" }
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.1"
metrics-process = "1.0.11"
mockall = "0.12.1"
mockito = "1.4.0"
nix = "0.20.0"
num-bigint = "0.4"
num-integer = "0.1.45"
num-rational = "0.4"
num-traits = "0.2.15"
once_cell = "1.19.0"
os_info = "3.6.0"
page_size = "0.6.0"
papyrus_base_layer = { path = "crates/papyrus_base_layer", version = "0.14.0-rc.4" }
papyrus_common = { path = "crates/papyrus_common", version = "0.14.0-rc.4" }
papyrus_config = { path = "crates/papyrus_config", version = "0.14.0-rc.4" }
papyrus_consensus = { path = "crates/sequencing/papyrus_consensus", version = "0.14.0-rc.4" }
papyrus_consensus_orchestrator = { path = "crates/sequencing/papyrus_consensus_orchestrator", version = "0.14.0-rc.4" }
papyrus_execution = { path = "crates/papyrus_execution", version = "0.14.0-rc.4" }
papyrus_monitoring_gateway = { path = "crates/papyrus_monitoring_gateway", version = "0.14.0-rc.4" }
papyrus_network = { path = "crates/papyrus_network", version = "0.14.0-rc.4" }
papyrus_network_types = { path = "crates/papyrus_network_types", version = "0.14.0-rc.4" }
papyrus_p2p_sync = { path = "crates/papyrus_p2p_sync", version = "0.14.0-rc.4" }
papyrus_proc_macros = { path = "crates/papyrus_proc_macros", version = "0.14.0-rc.4" }
papyrus_protobuf = { path = "crates/papyrus_protobuf", version = "0.14.0-rc.4" }
papyrus_rpc = { path = "crates/papyrus_rpc", version = "0.14.0-rc.4" }
papyrus_state_reader = { path = "crates/papyrus_state_reader", version = "0.14.0-rc.4" }
papyrus_storage = { path = "crates/papyrus_storage", version = "0.14.0-rc.4" }
papyrus_sync = { path = "crates/papyrus_sync", version = "0.14.0-rc.4" }
papyrus_test_utils = { path = "crates/papyrus_test_utils", version = "0.14.0-rc.4" }
parity-scale-codec = "3.6"
parity-scale-codec-derive = "3.6"
paste = "1.0.15"
phf = "0.11"
pretty_assertions = "1.4.0"
primitive-types = "0.12.1"
prometheus-parse = "0.2.4"
prost = "0.12.1"
prost-build = "0.12.1"
prost-types = "0.12.1"
protoc-prebuilt = "0.3.0"
pyo3 = "0.19.1"
pyo3-log = "0.8.1"
quote = "1.0.26"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
regex = "1.10.4"
replace_with = "0.1.7"
reqwest = "0.11"
retry = "2.0.0"
rlimit = "0.10.2"
rstest = "0.17.0"
rstest_reuse = "0.7.0"
rustc-hex = "2.1.0"
schemars = "0.8.12"
semver = "1.0.23"
serde = "1.0.197"
serde_json = "1.0.116"
serde_repr = "0.1.19"
serde_yaml = "0.9.16"
sha2 = "0.10.8"
sha3 = "0.10.8"
simple_logger = "4.0.0"
starknet-core = "0.6.0"
starknet-crypto = "0.7.1"
starknet-types-core = "0.1.6"
starknet_api = { path = "crates/starknet_api", version = "0.14.0-rc.4" }
starknet_batcher = { path = "crates/starknet_batcher", version = "0.14.0-rc.4" }
starknet_batcher_types = { path = "crates/starknet_batcher_types", version = "0.14.0-rc.4" }
starknet_class_manager_types = { path = "crates/starknet_class_manager_types", version = "0.14.0-rc.4" }
starknet_client = { path = "crates/starknet_client", version = "0.14.0-rc.4" }
starknet_committer = { path = "crates/starknet_committer", version = "0.14.0-rc.4" }
starknet_compilation_utils = { path = "crates/starknet_compilation_utils", version = "0.14.0-rc.4" }
starknet_compile_to_casm = { path = "crates/starknet_compile_to_casm", version = "0.14.0-rc.4" }
starknet_compile_to_native = { path = "crates/starknet_compile_to_native", version = "0.14.0-rc.4" }
starknet_consensus_manager = { path = "crates/starknet_consensus_manager", version = "0.14.0-rc.4" }
starknet_gateway = { path = "crates/starknet_gateway", version = "0.14.0-rc.4" }
starknet_gateway_types = { path = "crates/starknet_gateway_types", version = "0.14.0-rc.4" }
starknet_http_server = { path = "crates/starknet_http_server", version = "0.14.0-rc.4" }
starknet_infra_utils = { path = "crates/starknet_infra_utils", version = "0.14.0-rc.4" }
starknet_l1_provider = { path = "crates/starknet_l1_provider", version = "0.14.0-rc.4" }
starknet_l1_provider_types = { path = "crates/starknet_l1_provider_types", version = "0.14.0-rc.4" }
starknet_mempool = { path = "crates/starknet_mempool", version = "0.14.0-rc.4" }
starknet_mempool_p2p = { path = "crates/starknet_mempool_p2p", version = "0.14.0-rc.4" }
starknet_mempool_p2p_types = { path = "crates/starknet_mempool_p2p_types", version = "0.14.0-rc.4" }
starknet_mempool_types = { path = "crates/starknet_mempool_types", version = "0.14.0-rc.4" }
starknet_monitoring_endpoint = { path = "crates/starknet_monitoring_endpoint", version = "0.14.0-rc.4" }
starknet_patricia = { path = "crates/starknet_patricia", version = "0.14.0-rc.4" }
starknet_sequencer_infra = { path = "crates/starknet_sequencer_infra", version = "0.14.0-rc.4" }
starknet_sequencer_node = { path = "crates/starknet_sequencer_node", version = "0.14.0-rc.4" }
starknet_state_sync = { path = "crates/starknet_state_sync", version = "0.14.0-rc.4" }
starknet_state_sync_types = { path = "crates/starknet_state_sync_types", version = "0.14.0-rc.4" }
starknet_task_executor = { path = "crates/starknet_task_executor", version = "0.14.0-rc.4" }
static_assertions = "1.1.0"
statistical = "1.0.0"
strum = "0.25.0"
strum_macros = "0.25.2"
syn = "2.0.39"
tar = "0.4.38"
tempfile = "3.7.0"
test-case = "3.2.1"
test-log = "0.2.14"
thiserror = "1.0.37"
tikv-jemallocator = "0.5.4"
tokio = "1.37.0"
tokio-retry = "0.3"
tokio-stream = "0.1.8"
tokio-test = "0.4.4"
tokio-util = "0.7.13"
toml = "0.8"
toml_test_utils = { path = "toml_test_utils", version = "0.14.0-rc.4" }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-test = "0.2"
unsigned-varint = "0.8.0"
url = "2.5.0"
validator = "0.12"
void = "1.0.2"
zstd = "0.13.1"

# Note: both rust and clippy lints are warning by default and denied on the CI (see run_tests.py).
# To deny warnings in local dev env:
# - In the terminal: add to .bashrc `export RUSTFLAGS="$RUSTFLAGS -Dwarnings"
# - In vscode, add to settings.json "rust-analyzer.cargo.extraEnv": { "RUSTFLAGS": "-Dwarnings" }`
[workspace.lints.rust]
future-incompatible = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  # See [here](https://github.com/taiki-e/cargo-llvm-cov/issues/370) for a discussion on why this is
  # needed (from rust 1.80).
  'cfg(coverage_nightly)',
  # From rust 1.84, seems like the pyo3 crate version we are using breaks. Remove this once pyo3 is
  # removed from the workspace.
  'cfg(addr_of)',
] }

[workspace.lints.clippy]
as_conversions = "warn"
