[package]
name = "bench_tools"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
criterion.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
glob.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[[bench]]
harness = false
name = "dummy_bench"
path = "src/benches/dummy_bench.rs"
