[package]
name = "apollo_base_layer_tests"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Testing utilities for L1 (Ethereum) base layer interactions."

[features]

[lints]
workspace = true

[dependencies]
alloy.workspace = true
apollo_config.workspace = true
async-trait.workspace = true
colored.workspace = true
papyrus_base_layer = { workspace = true, features = ["testing"] }
starknet_api.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
