[package]
name = "apollo_batcher_types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
testing = ["mockall"]

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
blockifier = { workspace = true, features = ["transaction_serde"] }
chrono = { workspace = true, features = ["serde"] }
derive_more.workspace = true
mockall = { workspace = true, optional = true }
apollo_proc_macros.workspace = true
serde = { workspace = true, features = ["derive"] }
starknet_api.workspace = true
apollo_sequencer_infra.workspace = true
apollo_state_sync_types.workspace = true
strum_macros.workspace = true
thiserror.workspace = true


[dev-dependencies]
mockall.workspace = true
