[package]
name = "apollo_batcher_types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
testing = ["mockall"]

[lints]
workspace = true

[dependencies]
apollo_infra.workspace = true
apollo_metrics.workspace = true
apollo_proc_macros.workspace = true
apollo_state_sync_types.workspace = true
apollo_storage.workspace = true
async-trait.workspace = true
blockifier = { workspace = true, features = ["transaction_serde"] }
chrono = { workspace = true, features = ["serde"] }
derive_more.workspace = true
indexmap.workspace = true
mockall = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
starknet_api.workspace = true
strum = { workspace = true, features = ["derive"] }
strum_macros.workspace = true
thiserror.workspace = true


[dev-dependencies]
apollo_infra_utils = { workspace = true, features = ["testing"] }
apollo_storage = { workspace = true, features = ["testing"] }
axum.workspace = true
mockall.workspace = true
serde_json.workspace = true
starknet_api = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["full", "test-util"] }
tower.workspace = true
