[package]
name = "apollo_block_hash_calculator_types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
testing = ["mockall"]

[lints]
workspace = true

[dependencies]
apollo_infra.workspace = true
apollo_proc_macros.workspace = true
async-trait.workspace = true
mockall = { workspace = true, optional = true }
serde.workspace = true
starknet_api.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
