[package]
name = "apollo_central_sync"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
testing = []

[dependencies]
apollo_class_manager_types.workspace = true
apollo_config.workspace = true
apollo_proc_macros.workspace = true
apollo_starknet_client.workspace = true
apollo_state_sync_metrics.workspace = true
apollo_storage.workspace = true
async-stream.workspace = true
async-trait.workspace = true
cairo-lang-starknet-classes.workspace = true
chrono.workspace = true
futures.workspace = true
futures-util.workspace = true
validator.workspace = true
indexmap = { workspace = true, features = ["serde"] }
itertools.workspace = true
lru.workspace = true
metrics.workspace = true
papyrus_base_layer.workspace = true
papyrus_common.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive"] }
starknet-types-core.workspace = true
starknet_api.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "sync"] }
tracing.workspace = true

[dev-dependencies]
apollo_class_manager_types = { workspace = true, features = ["testing"] }
apollo_starknet_client = { workspace = true, features = ["testing"] }
apollo_storage = { workspace = true, features = ["testing"] }
apollo_test_utils.workspace = true
assert_matches.workspace = true
mockall.workspace = true
pretty_assertions.workspace = true
simple_logger.workspace = true
starknet_api = { workspace = true, features = ["testing"] }
tokio-stream.workspace = true

[package.metadata.cargo-machete]
# `metrics` is used in `latency_histogram` but is falsely detected as unused.
ignored = ["metrics"]

[lints]
workspace = true
