[package]
name = "apollo_class_manager"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
testing = []

[lints]
workspace = true

[dependencies]
apollo_class_manager_types.workspace = true
apollo_config.workspace = true
apollo_sequencer_infra.workspace = true
apollo_sequencer_metrics.workspace = true
apollo_sierra_multicompile_types.workspace = true
apollo_storage.workspace = true
async-trait.workspace = true
hex.workspace = true
serde.workspace = true
starknet_api.workspace = true
strum.workspace = true
strum_macros.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
validator.workspace = true

[dev-dependencies]
apollo_sierra_multicompile_types = { workspace = true, features = ["testing"] }
mockall.workspace = true
starknet_api = { workspace = true, features = ["testing"] }
tokio.workspace = true
