[package]
name = "apollo_class_manager"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
testing = []

[lints]
workspace = true

[dependencies]
apollo_class_manager_types.workspace = true
apollo_compile_to_casm_types.workspace = true
apollo_config.workspace = true
apollo_infra.workspace = true
apollo_metrics.workspace = true
apollo_state_sync_types.workspace = true
apollo_storage.workspace = true
async-trait.workspace = true
hex.workspace = true
serde.workspace = true
starknet_api.workspace = true
strum.workspace = true
strum_macros.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
validator.workspace = true

[dev-dependencies]
apollo_compile_to_casm_types = { workspace = true, features = ["testing"] }
assert_matches.workspace = true
mockall.workspace = true
starknet_api = { workspace = true, features = ["testing"] }
tokio.workspace = true
