[package]
name = "apollo_class_manager_config"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Configuration types for Apollo class manager"

[dependencies]
apollo_config.workspace = true
apollo_storage.workspace = true
serde = { workspace = true, features = ["derive"] }
starknet_api.workspace = true
validator.workspace = true

[lints]
workspace = true
