[package]
name = "apollo_class_manager_types"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
testing = ["mockall"]

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
mockall = { workspace = true, optional = true }
apollo_proc_macros.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
starknet_api.workspace = true
apollo_sequencer_infra.workspace = true
apollo_sierra_multicompile_types.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
mockall.workspace = true
starknet_api = { workspace = true, features = ["testing"] }
